Majo design finished

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.3",
+    "@react-navigation/stack": "^5.13.0",
     "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-safe-area-context": "^3.1.9"
   },
   "devDependencies": {
